syntax = "proto3";

package notification;

service NotificationService {
  rpc SendNotification(NotificationRequest) returns (NotificationResponse);
  rpc GetUserNotifications(UserIdRequest) returns (NotificationList);
  rpc MarkAsRead(NotificationIdRequest) returns (NotificationResponse);
}

message NotificationRequest {
  int32 userId = 1;
  string type = 2;
  string title = 3;
  string message = 4;
  int32 ticketId = 5;
  string metadata = 6;
}

message NotificationResponse {
  bool success = 1;
  string message = 2;
  int32 notificationId = 3;
}

message UserIdRequest {
  int32 userId = 1;
}

message NotificationList {
  repeated Notification notifications = 1;
}

message Notification {
  int32 id = 1;
  int32 userId = 2;
  string type = 3;
  string title = 4;
  string message = 5;
  int32 ticketId = 6;
  bool isRead = 7;
  string createdAt = 8;
}

message NotificationIdRequest {
  int32 notificationId = 1;
}